<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="202dp"
        android:layout_height="28dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:text="@string/t5"
        android:textColor="#5E35B1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        tools:layout_editor_absoluteY="96dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="105dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/t1"
        android:textColor="#8E24AA"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="228dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="105dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/t2"
        android:textColor="#8E24AA"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="316dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="105dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/t3"
        android:textColor="#8E24AA"
        app:layout_constraintEnd_toStartOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="387dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/t4"
        android:textColor="#8E24AA"
        app:layout_constraintEnd_toStartOf="@+id/editText4"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="491dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/b1"
        android:textColor="#8E24AA"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        tools:layout_editor_absoluteY="575dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/b2"
        android:textColor="#8E24AA"
        app:layout_constraintEnd_toEndOf="@+id/editText4"
        app:layout_constraintStart_toEndOf="@+id/button3"
        tools:layout_editor_absoluteY="567dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b3"
        android:textColor="#8E24AA"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="632dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="210dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Bus fair name"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="218dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="210dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Bus fair name"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        tools:layout_editor_absoluteY="316dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="210dp"
        android:layout_height="41dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Start time"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="210dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="full ticket price"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="491dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="210dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="@+id/editText3"
        tools:layout_editor_absoluteY="434dp" />

</androidx.constraintlayout.widget.ConstraintLayout>